src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
/* @import url("https://fonts.googleapis.com/css2?family=Bangers&family=Carter+One&family=Chivo+Mono:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Khand:wght@300;400;500;600&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,600;1,700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;1,300;1,500&family=Unbounded:wght@200;300;400;500;600;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;500&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap"); */

.banner {
  background-image: url("/../assets/banner.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
html, body {
  font-family: 'Poppins', sans-serif;
}

* {
  font-family: inherit;
}

html {
  scroll-behavior: smooth;
}

.sd {
  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.05);
}

.box_div:hover {
  background: linear-gradient(180deg, #007dc5 0%, #003bd2 100%);
  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
  transition: 0.9s ease-out;
}

.box_div {
  /* background: linear-gradient(180deg, #007DC5 0%, #003BD2 100%); */
  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
  transition: 0.9s ease-out;
}

.about_box {
  width: 100%;
  height: 116px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

  border-radius: 50px 0px;
}

.whatsapp_float {
  position: fixed;
  width: 60px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 40px;
  right: 40px;
  background-color: #25d366;
  color: #fff;
  border-radius: 50px;
  text-align: center;
  font-size: 30px;
  box-shadow: 2px 2px 3px #999;
  z-index: 100;
}
/* .whatsapp-icon {
    margin-top: 16px;
  } */

/* for mobile */
@media screen and (max-width: 767px) {
  /* .whatsapp-icon {
      margin-top: 10px;
    } */

  .whatsapp_float {
    width: 40px;
    height: 40px;
    bottom: 20px;
    right: 10px;
    font-size: 22px;
  }
}

.sh {
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
  display: inline-flex;
}

.banner2 {
  background-image: url("/../assets/image 9get.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.testimonial {
  background-image: url("/../assets/testimonial.png");
  background-repeat: no-repeat;
  background-size: cover;
  /* position: relative; */
  /* z-index: 55; */
}

.slick-dots li button:before {
  color: white !important;
}

.term {
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
}

.slick-dots {
  padding-right: 23px !important;
}

.slick-next {
  display: none !important;
}

element.style {
  display: block;
  padding-left: -6px;
  padding-left: -31px;
  padding-right: 23px;
}

element.style {
  display: block;
  padding-left: -6px;
  padding-left: -31px;
  padding-right: 23px;
}

element.style {
  display: block;
  padding-left: -6px;
  padding-left: -31px;
  padding-right: 23px;
}

/* @media(min-width:640px){
    .slick-slider{
        width:428px !important;
    }
}

@media(min-width:768px){
    .slick-slider {
        width:397px !important;
    }
}  


@media(min-width:1024px){
    .slick-slider{
        width:598px !important;
    } 
}
@media(min-width:1280px){
    .slick-slider{
        width:915px !important;
    }
} */

.banner3 {
  background-image: url("/../assets/image 15edu.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.box1 {
  background: #ffffff;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
}

.slide1.slick-slider {
  width: 100% !important;
}

.banner4 {
  background-image: url("/../assets/image 17about.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.banner5 {
  background-image: url("/../assets/Rectangle 1228banner4.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.appro:hover {
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
  border: 1px solid #f8f8f8;
}

.ant-collapse-header {
  padding: 0px !important;
}
.ant-collapse-header-text {
  padding-left: 28px;
  font-weight: 500;
  font-size: 17px;
  line-height: 22px;
  color: #0d1250;
  /* font-family: 'IBM Plex Serif', serif; */
}

.ant-collapse-content-box p {
  font-weight: 300;
  font-size: 15px;
  color: #0d1250;
  line-height: 160%;
  padding-left: 63px;
}

.ant-collapse-header {
  padding: 24px 16px !important;
}

.ant-collapse-header .ant-collapse-arrow {
  display: block !important;
  font-size: 23px !important;
}

.ant-collapse-item.ant-collapse-item-active {
  background-color: #f1faff !important;
}

.ant-collapse-item {
  margin-bottom: 8px !important;
  border: 1px solid #ededed !important;
  background-color: #ffffff !important;
}

.icon {
  color: #ff5421 !important;
}

.fticon {
  fill: #cfcfcf;
}

.slick-prev {
  display: none !important;
}

.inputfield {
  outline: none;
}

.icon2 {
  color: #a3a3a3 !important;
}

.baricons {
  font-size: 34px;
  color: gray;
  /* margin-right: 20px; */
}
.arrowback {
  color: red;
  font-size: 20px;
  z-index: 1;
}

.arrowforward {
  color: red;
  position: absolute;
  top: 42%;
  right: 3%;
  font-size: 20px;
  z-index: 1;
}

.contact_form {
  background: url("/../assets/contact_form.png");
  background-size: cover;
}
.service_box {
  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
}

/* .cover {
  background: linear-gradient(
    180deg,
    rgba(28, 171, 211, 0.174) 0%,
    rgba(6, 6, 94, 0.8) 100%
  );
} */

.ant-drawer {
  left: 470px !important;
}

.nav {
  position: fixed;
  width: 100%;
  top: 0px;
  left: 0;
  right: 0;
  z-index: 999;
  background-color: white;
  animation: 0.6s ease-out normal both 1 running fixedAnim;
  -webkit-animation: 0.6s ease 0s normal both 1 running fixedAnim;
  -moz-animation: 0.6s ease 0s normal both 1 running fixedAnim;
  -o-animation: 0.6s ease 0s normal both 1 running fixedAnim;
  -webkit-box-shadow: 0 4px 16px rgb(0 0 0 / 29%);
  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.29);
}

@keyframes fixedAnim {
  0% {
    top: -100%;
  }

  100% {
    top: 0;
  }
}

/* .css-specific ul{
 
        padding-left: 30px;
        list-style-type: none;
    
      
  
}


.css-specific ul li {
    color: #212529;
    line-height: 32px;
    position: relative;
    padding-left: 9px;

  } */
/* p span::after {
    content: '➡️';
    position: absolute;
    left: 0px;
    top: 0px;
font-size: 12px;
 
  
    


  } */

.css-specific ul {
  padding-left: 30px;
  list-style-type: none;
  background-color: red !important;
}

.pop.ant-modal .ant-modal-content {
  padding: 0px !important;
}
.pop.ant-modal .ant-modal-close-x {
  color: white !important;
  position: absolute !important;
  right: 0px !important;
  top: 0px !important;
}
/* :where(.css-dev-only-do-not-override-yp8pcc).ant-modal .ant-modal-content */
.custom-bg{
background-image: url("/../assets/news.jpg");
background-repeat: no-repeat;
background-size: cover;
background-attachment: fixed;

}

@media (max-width: 425px) {
  .ant-collapse-header-text {
    padding-left: 0;
  }
}

.hover-content {
  top: 100%; 
  width: 100%;
  height: 100%;
  background-color: rgb(0, 0, 0);
  opacity: 60%;
  transition: top 0.5s; 
}
.card:hover .hover-content  {
top: 0;
transition: top 0.6s; 
}

